--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'bootstrap-icons';
   font-display: swap;
-  src: url('./node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff2') format('woff2'),
-       url('./node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  src: url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/fonts/bootstrap-icons.woff2') format('woff2'),
+       url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/fonts/bootstrap-icons.woff') format('woff');
 }
